...
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_yes"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#E53935"
                android:text="Yes"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:cornerRadius="8dp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
...
